# modern_durak_matchmaking_proxy

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  ProjectOptions.cmake  README.md  conanfile.py  main.cxx
.github/workflows/: docker-image.yml
cmake/: ClangBuildAnalyzer.cmake
database/: modern-durak.db
test/: CMakeLists.txt  hello.cxx  integration.cxx  mockserver.hxx  util.cxx  util.hxx
test/cert/: dhparam.pem  localhost-key.pem  localhost.pem
